Gutenboarding: Increase size of input text size to avoid zooming in on iOS (#42138)
* Increase size of input text size to avoid zooming in on iOS, add autocomplete new-password

* Ensure font-size at larger viewport widths is still 14px for the input fields

--- a/client/landing/gutenboarding/components/signup-form/style.scss
+++ b/client/landing/gutenboarding/components/signup-form/style.scss
@@ -64,13 +64,19 @@
 
 	.components-text-control__input {
 		padding: 18px 14px;
-		@include onboarding-medium-text;
+		font-size: 16px;
+		line-height: 17px;
 		border-radius: 0;
 		border: 1px solid var( --studio-gray-10 );
 		width: 100%;
 		max-width: 100%;
 
+		&::placeholder {
+			@include onboarding-medium-text;
+		}
+
 		@include break-mobile {
+			@include onboarding-medium-text;
 			max-width: 400px;
 		}
 	}
